# ats-checker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hello.py  main.py  pyproject.toml  uv.toml
data/: .gitkeep
notebooks/: 01_embedding_analysis.ipynb
outputs/: .gitkeep
src/ats_checker/: __init__.py  app.py  cli.py  config.py  cot_enhancer.py  embedding_analyzer.py  job_scraper.py  keyword_extractor.py  llm_analyzer.py  models.py  pdf_parser.py  resume_exporter.py  resume_generator.py
src/ats_checker/evaluation/: __init__.py  embedding_eval.py  enhancement_eval.py  resume_chunker.py  test_dataset.py
src/ats_checker/ui/: __init__.py  editor.py  panels.py  results.py
tests/: conftest.py  test_config.py  test_keyword_extractor.py  test_models.py  test_pdf_parser.py  test_resume_exporter.py  test_resume_generator.py
